--- a/localization/kor/AigisMod-Card-Strings.json
+++ b/localization/kor/AigisMod-Card-Strings.json
@@ -4364,8 +4364,8 @@
   },
   "aigisMod:Moltena": {
     "NAME": "모르테나",
-    "DESCRIPTION": "aigismod:마물술사 NL 마수의 코스트가 0 이 되며 2 데미지를 추가합니다.",
-    "UPGRADE_DESCRIPTION": "aigismod:마물술사 NL 마수의 코스트가 0 이 되며 2 데미지를 추가합니다. 뽑을 카드 더미에 1 마수를 추가합니다.",
+    "DESCRIPTION": "aigismod:마물술사. NL 마수의 코스트가 0 이 되며 2 데미지를 추가합니다.",
+    "UPGRADE_DESCRIPTION": "aigismod:마물술사. NL 마수의 코스트가 0 이 되며 2 데미지를 추가합니다. 뽑을 카드 더미에 1 마수를 추가합니다.",
     "EXTENDED_DESCRIPTION": [
       "마수 조련사",
       "aigismod:마물술사. NL 마수의 코스트가 0 이 되며 5 데미지를 추가합니다."
@@ -4373,24 +4373,24 @@
   },
   "aigisMod:Suil": {
     "NAME": "스이루",
-    "DESCRIPTION": "aigismod:마물술사 NL 카드를 2 장 뽑습니다. NL 활력을 !M! 얻습니다.",
-    "UPGRADE_DESCRIPTION": "aigismod:마물술사 NL 카드를 2 장 뽑습니다. NL 활력을 !M! 얻습니다.",
+    "DESCRIPTION": "aigismod:마물술사. NL 카드를 2 장 뽑습니다. NL 활력을 !M! 얻습니다.",
+    "UPGRADE_DESCRIPTION": "aigismod:마물술사. NL 카드를 2 장 뽑습니다. NL 활력을 !M! 얻습니다.",
     "EXTENDED_DESCRIPTION": [
       "마수 조련사"
     ]
   },
   "aigisMod:Blanche": {
     "NAME": "블랑슈",
-    "DESCRIPTION": "aigismod:마물술사 NL 마수를 사용할 때마다 힘을 1 얻습니다.",
-    "UPGRADE_DESCRIPTION": "aigismod:마물술사 NL 마수를 사용할 때마다 힘을 1 얻습니다. NL 모든 적에게 약화를 1 부여합니다.",
+    "DESCRIPTION": "aigismod:마물술사. NL 마수를 사용할 때마다 힘을 1 얻습니다.",
+    "UPGRADE_DESCRIPTION": "aigismod:마물술사. NL 마수를 사용할 때마다 힘을 1 얻습니다. NL 모든 적에게 약화를 1 부여합니다.",
     "EXTENDED_DESCRIPTION": [
       "마수 조련사"
     ]
   },
   "aigisMod:Shushu": {
     "NAME": "슈슈",
-    "DESCRIPTION": "aigismod:마물술사 NL 마수를 사용하면 방어도를 !M! 얻습니다.",
-    "UPGRADE_DESCRIPTION": "aigismod:마물술사 NL 마수를 사용하면 방어도를 !M! 얻습니다.",
+    "DESCRIPTION": "aigismod:마물술사. NL 마수를 사용하면 방어도를 !M! 얻습니다.",
+    "UPGRADE_DESCRIPTION": "aigismod:마물술사. NL 마수를 사용하면 방어도를 !M! 얻습니다.",
     "EXTENDED_DESCRIPTION": [
       "토끼귀의 마수 조련사"
     ]
