--- a/localization/kor/AigisMod-Keyword-Strings.json
+++ b/localization/kor/AigisMod-Keyword-Strings.json
@@ -455,6 +455,7 @@
     "PROPER_NAME": "마물술사",
     "NAMES": [
       "마물술사",
+      "마물술사의",
       "Beast Tamer",
       "Beast_tamer.",
       "Beast_tamer",
