--- a/localization/kor/AigisMod-UI-Strings.json
+++ b/localization/kor/AigisMod-UI-Strings.json
@@ -329,7 +329,7 @@
 
   "VivianAction": {
     "TEXT": [
-      "이번 전투에서 코스트를 감소시킵니다t."
+      "이번 전투에서 코스트를 감소시킵니다."
     ]
   },
 
@@ -355,72 +355,72 @@
 
   "PheasantAction": {
     "TEXT": [
-      "return to bottom of Draw Pile."
+      "뽑을 카드 더미 가장 아래로 되돌릴 카드를 선택합니다."
     ]
   },
 
   "PotalAction": {
     "TEXT": [
-      "Choose up to ", " Aerial cards to send to Discard Pile.",
-      "Choose an Aerial card to send to Discard Pile.",
-      "I don't have Aerial cards in Draw Pile..."
+      "버린 카드 더미에 보낼 비행대 카드를 ", " 장까지 선택합니다.",
+      "버린 카드 더미에 보낼 비행대 카드를 선택합니다.",
+      "뽑을 카드 더미에 비행대 카드가 없어..."
     ]
   },
 
   "PuniruAction": {
     "TEXT": [
-      "Choose 1 card to add to your hand."
+      "손패에 추가할 카드 1 장을 선택합니다."
     ]
   },
 
   "AmelieAction": {
     "TEXT": [
-      "Select a Sailor Attack Card to add to hand.",
-      "I don't have a Sailor Attack Card in Draw Pile..."
+      "손패에 추가할 세일러 공격 카드를 1 장 선택합니다.",
+      "뽑을 카드 더미에 세일러 공격 카드가 없어..."
     ]
   },
 
   "RenataAction": {
     "TEXT": [
-      "Choose up to ", " cards to send to Discard Pile."
+      "버린 카드 더미에 보낼 카드를 ", " 장까지 선택합니다."
     ]
   },
 
   "ThrudAction": {
     "TEXT": [
-      "Choose 1 Aerial card to send to Discard Pile."
+      "버린 카드 더미에 보낼 비행대 카드 1 장을 선택합니다."
     ]
   },
 
   "JacquelineAction": {
     "TEXT": [
-      "Select a Sailor or Deep Sea card to add to hand.",
-      "I don't have a Sailor or Deep Sea card in Discard Pile..."
+      "손패에 추가할 세일러 또는 심해 카드를 선택합니다.",
+      "버린 카드 더미에 세일러 또는 심해 카드가 없어..."
     ]
   },
 
   "NoelAction": {
     "TEXT": [
-      "duplicate."
+      "복사할 카드를 선택합니다."
     ]
   },
 
   "ShirleyAction": {
     "TEXT": [
-      "Choose a Spirit User, Elemental, Summoner or Summon card to add to hand from Draw Pile or Discard Pile.",
-      "Choose up to 2 Spirit User, Elemental, Summoner or Summon cards to add to hand from Draw Pile or Discard Pile."
+      "뽑을 카드 더미 또는 버린 카드 더미에서 손패로 추가할 엘레멘탈러, 엘레멘탈, 소환사, 소환수 카드를 1 장 선택합니다.",
+      "뽑을 카드 더미 또는 버린 카드 더미에서 손패로 추가할 엘레멘탈러, 엘레멘탈, 소환사, 소환수 카드를 2 장까지 선택합니다."
     ]
   },
 
   "RefletAction": {
     "TEXT": [
-      "Choose a Light Elemental to add to hand from Draw Pile or Discard Pile."
+      "뽑을 카드 더미 또는 버린 카드 더미에서 손패로 추가할 빛속성 엘레멘탈을 선택합니다."
     ]
   },
 
   "LatourAction": {
     "TEXT": [
-      "keep."
+      "보존할 카드를 선택합니다."
     ]
   }
 }
