--- a/localization/kor/AigisMod-Relic-Strings.json
+++ b/localization/kor/AigisMod-Relic-Strings.json
@@ -426,7 +426,7 @@
     ]
   },
   "aigisMod:BlastingBall": {
-    "NAME": "괴력퐁쇄철구",
+    "NAME": "괴력폭쇄철구",
     "FLAVOR": "디나 : 갑옷 때문이려나... 근육이 피곤해.",
     "DESCRIPTIONS": [
       "턴 종료시 #b16 이상의 #y방어도를 가진 경우 모든 적에게 #b10 데미지를 가합니다."
