--- a/localization/kor/AigisMod-Card-Strings.json
+++ b/localization/kor/AigisMod-Card-Strings.json
@@ -4649,11 +4649,11 @@
   },
   "aigisMod:Duo2": {
     "NAME": "듀오",
-    "DESCRIPTION": "!D! 데미지를 2 차례 가합니다. aigismod:세일러 !M! : 버린 카드 더미에 더블 개틀링 1 장을 추가합니다. NL 소멸.",
-    "UPGRADE_DESCRIPTION": "!D! 데미지를 2 차례 가합니다. aigismod:세일러 !M! : 버린 카드 더미에 더블 개틀링 1 장을 추가합니다. NL 소멸.",
+    "DESCRIPTION": "!D! 데미지를 2 차례 가합니다. NL aigismod:세일러 !M! : 버린 카드 더미에 더블 개틀링 1 장을 추가합니다. NL 소멸.",
+    "UPGRADE_DESCRIPTION": "!D! 데미지를 2 차례 가합니다. NL aigismod:세일러 !M! : 버린 카드 더미에 더블 개틀링 1 장을 추가합니다. NL 소멸.",
     "EXTENDED_DESCRIPTION" : [
       "무쌍의 해적",
-      "!D! 데미지를 2 차례 가합니다. aigismod:세일러 !M! : 버린 카드 더미에 더블 개틀링 1 장을 추가합니다. NL aigismod:잔여횟수 : !stslib:ex!"
+      "!D! 데미지를 2 차례 가합니다. NL aigismod:세일러 !M! : 버린 카드 더미에 더블 개틀링 1 장을 추가합니다. NL aigismod:잔여횟수 : !stslib:ex!"
     ]
   },
   "aigisMod:DGDuo": {
@@ -4674,8 +4674,8 @@
   },
   "aigisMod:Karina": {
     "NAME": "카리나",
-    "DESCRIPTION": "!D! 데미지를 가합니다. NL aigismod:암살 NL aigismod:세일러 1: 이 전투에서 !M! 데미지를 추가로 가합니다.",
-    "UPGRADE_DESCRIPTION": "!D! 데미지를 가합니다. NL aigismod:암살 NL aigismod:세일러 1: 이 전투에서 !M! 데미지를 추가로 가합니다.",
+    "DESCRIPTION": "!D! 데미지를 가합니다. NL aigismod:암살. NL aigismod:세일러 1 : 이 전투에서 !M! 데미지를 추가로 가합니다.",
+    "UPGRADE_DESCRIPTION": "!D! 데미지를 가합니다. NL aigismod:암살. NL aigismod:세일러 1 : 이 전투에서 !M! 데미지를 추가로 가합니다.",
     "EXTENDED_DESCRIPTION" : [
       "가련해적"
     ]
@@ -4690,11 +4690,11 @@
   },
   "aigisMod:Minerva": {
     "NAME": "미네르바",
-    "DESCRIPTION": "aigismod:스킬챠지 : 이 카드의 데미지를 !M! 만큼 상승시킵니다 NL aigismod:세일러 !aigisMod:SecondMagic! : !D! 데미지를 가합니다.",
-    "UPGRADE_DESCRIPTION": "aigismod:스킬챠지 : 이 카드의 데미지를 !M! 만큼 상승시킵니다 NL aigismod:세일러 !aigisMod:SecondMagic! : !D! 데미지를 가합니다.",
+    "DESCRIPTION": "aigismod:스킬챠지 : 이 카드의 데미지를 !M! 만큼 상승시킵니다. NL aigismod:세일러 !aigisMod:SecondMagic! : !D! 데미지를 가합니다.",
+    "UPGRADE_DESCRIPTION": "aigismod:스킬챠지 : 이 카드의 데미지를 !M! 만큼 상승시킵니다. NL aigismod:세일러 !aigisMod:SecondMagic! : !D! 데미지를 가합니다.",
     "EXTENDED_DESCRIPTION" : [
       "전설의 해적",
-      "aigismod:스킬챠지: 이 카드의 데미지를 !M! 만큼 상승시킵니다 NL aigismod:세일러 !aigisMod:SecondMagic! : !D! 데미지를 가합니다."
+      "aigismod:스킬챠지: 이 카드의 데미지를 !M! 만큼 상승시킵니다. NL aigismod:세일러 !aigisMod:SecondMagic! : !D! 데미지를 가합니다."
     ]
   },
   "aigisMod:Monica2": {
