--- a/localization/kor/AigisMod-Card-Strings.json
+++ b/localization/kor/AigisMod-Card-Strings.json
@@ -4463,7 +4463,7 @@
   "aigisMod:Wirbel": {
     "NAME": "비아벨",
     "DESCRIPTION": "aigismod:심해. NL aigismod:관통 데미지를 !D! 가합니다. NL 본인의 aigismod:수압만큼 적의 힘을 감소시킵니다. NL 소멸.",
-    "UPGRADE_DESCRIPTION": "aigismod:관통 데미지를 !D! 가합니다. NL 본인의 aigismod:수압만큼 적의 힘을 감소시킵니다. NL 소멸.",
+    "UPGRADE_DESCRIPTION": "aigismod:심해. NL aigismod:관통 데미지를 !D! 가합니다. NL 본인의 aigismod:수압만큼 적의 힘을 감소시킵니다. NL 소멸.",
     "EXTENDED_DESCRIPTION": [
       "잠항기사"
     ]
@@ -4582,8 +4582,8 @@
   },
   "aigisMod:Lela": {
     "NAME": "이에라",
-    "DESCRIPTION": "에어 시그널을 사용하면 1 임시체력을 얻습니다.",
-    "UPGRADE_DESCRIPTION": "에어 시그널 1 장을 손패로 가져옵니다. NL 에어 시그널을 사용하면 1 임시체력을 얻습니다.",
+    "DESCRIPTION": "에어 시그널을 사용하면 2 임시체력을 얻습니다.",
+    "UPGRADE_DESCRIPTION": "에어 시그널 1 장을 손패로 가져옵니다. NL 에어 시그널을 사용하면 2 임시체력을 얻습니다.",
     "EXTENDED_DESCRIPTION" : [
       "사구익의 힐러"
     ]
@@ -4607,8 +4607,8 @@
   },
   "aigisMod:Tabitha": {
     "NAME": "타바사",
-    "DESCRIPTION": "턴 시작시 마수/수압/에어 시그널 중 무작위 1 장을 손패에 추가합니다.",
-    "UPGRADE_DESCRIPTION": "턴 시작시 마수/수압/에어 시그널 중 무작위 1 장을 손패에 추가합니다.",
+    "DESCRIPTION": "턴 시작시 마수/심해/에어 시그널 중 무작위 1 장을 손패에 추가합니다.",
+    "UPGRADE_DESCRIPTION": "턴 시작시 마수/심해/에어 시그널 중 무작위 1 장을 손패에 추가합니다.",
     "EXTENDED_DESCRIPTION" : [
       "기발한 발명가"
     ]
@@ -5023,8 +5023,8 @@
   },
   "aigisMod:Ifrit": {
     "NAME": "이프리트",
-    "DESCRIPTION": "!D! 데미지를 가합니다. NL aigismod:잔여횟수 : !stslib:ex!",
-    "UPGRADE_DESCRIPTION": "aigismod:관통 데미지를 !D! 가합니다. NL aigismod:잔여횟수 : !stslib:ex!",
+    "DESCRIPTION": "!D! 데미지를 가합니다. NL aigismod:화상을 !M! 부여합니다. NL aigismod:잔여횟수 : !stslib:ex!",
+    "UPGRADE_DESCRIPTION": "aigismod:관통 데미지를 !D! 가합니다. NL aigismod:화상을 !M! 부여합니다. NL aigismod:잔여횟수 : !stslib:ex!",
     "EXTENDED_DESCRIPTION" : [
       "소환수"
     ]
