--- a/localization/kor/AigisMod-Power-Strings.json
+++ b/localization/kor/AigisMod-Power-Strings.json
@@ -444,7 +444,7 @@
 
         "aigisMod:WaterPressure": {
                 "NAME": "수압",
-                "DESCRIPTIONS": ["턴 종료시 #b", " #yHP를 잃고, 보스 이외의 유닛이 스탯 #b7 에 다다르면 모든 #yHP를 잃습니다."]
+                "DESCRIPTIONS": ["턴 종료시 #b", " #yHP를 잃고, 보스와 엘리트를 이외의 유닛이 스탯 #b7 에 다다르면 모든 #yHP를 잃습니다."]
         },
         "aigisMod:DrownedEnemy": {
                 "NAME": "익사",
@@ -504,7 +504,7 @@
         },
         "aigisMod:Eureka": {
                 "NAME": "유레카!",
-                "DESCRIPTIONS": ["턴 시작시 #y마수, #y수압, #y에어 #y시그널 중 무작위의 #b", " 장을 손패에 추가합니다."]
+                "DESCRIPTIONS": ["턴 시작시 #y마수, #y심해, #y에어 #y시그널 중 무작위의 #b", " 장을 손패에 추가합니다."]
         },
         "aigisMod:DevouringGreatwolf": {
                 "NAME": "큰 늑대",
