JPN Translations update 31/03/2024

--- a/localization/jpn/AigisMod-Event-Strings.json
+++ b/localization/jpn/AigisMod-Event-Strings.json
@@ -13,7 +13,9 @@
       "[立ち去る]",
       "アップグレードする英傑カードを1枚選ぶ。",
       "[力を借りる] #gレア英傑カードにアップグレードする。",
-      "[LOCKED] アンコモン英傑カードを持っていません。"
+      "[LOCKED] アンコモン英傑カードを持っていません。",
+      "[ひとまず召喚] 戦う前に #y英傑結晶 レリックを使用する。",
+      "[LOCKED] 英傑結晶レリックか使用コストを持っていない。"
     ]
   },
 
