--- a/localization/jpn/AigisMod-Power-Strings.json
+++ b/localization/jpn/AigisMod-Power-Strings.json
@@ -265,7 +265,7 @@
         },
         "aigisMod:SpookyPhenomenon": {
                 "NAME": "どっきりフェノメノン",
-                "DESCRIPTIONS": ["ターン終了時に、 手札のキャラクターを #b1 枚 #y廃棄 することができる。 これを行った時、敵全体に #y脱力 #b1 を与えて #b1 減少する。", " スタックが #b0 となった時このパワーは取り除かれる。"]
+                "DESCRIPTIONS": ["ターン終了時に、 手札 #b1 枚 を #y廃棄 することができる。 これを行った時、敵全体に #y脱力 #b1 を与えて #b1 減少する。", " スタックが #b0 となった時このパワーは取り除かれる。"]
         },
         "aigisMod:ClearAndSerene": {
                 "NAME": "明鏡止水",
