--- a/localization/kor/AigisMod-Event-Strings.json
+++ b/localization/kor/AigisMod-Event-Strings.json
@@ -13,7 +13,9 @@
       "[떠난다]",
       "덱에 추가할 영걸 카드를 선택하십시오.",
       "[힘을 빌리다] #g희귀 #g영걸 #g카드로 #g업그레이드합니다.",
-      "[잠김] 희귀 영걸 카드로 업그레이드할 영걸 카드가 없습니다."
+      "[잠김] 희귀 영걸 카드로 업그레이드할 영걸 카드가 없습니다.",
+      "[힘을 빌리다 와 전투] 전투 전에 #y영걸결정 유물을 사용하세요.",
+      "[잠김] 영걸결정 유물을 사용할 수 없습니다."
     ]
   },
 
