--- a/localization/kor/AigisMod-UI-Strings.json
+++ b/localization/kor/AigisMod-UI-Strings.json
@@ -11,7 +11,7 @@
       "백의 제국", "이 카드는 #y제국 카드들을 지명하는 효과를 받는 대상이 됩니다. #y황제로 플레이할 때에만 얻을 수 있습니다.",
       "주술사", "이 카드를 사용했을 때 표시되는 #y저주가 덱에 없다면 덱에 해당 저주를 추가합니다.",
       "데몬", "이 카드가 턴 시작시 소멸 카드 더미에 있을 경우, 이번 턴에만 이 카드의 코스트를 본래 코스트에서 1 감소된 상태로 손패에 넣습니다.",
-      "비행대", "이 카드를 사용했을 때, #b1 #y에어 #y시그널을 뽑을 카드 더미에 섞어 넣습니다. 소멸된 #y에어 #y시그널 #b1 장당 데미지가 #b1 증가합니다.",
+      "비행대", "이 카드를 사용했을 때, #b1 #y에어 #y시그널을 뽑을 카드 더미에 섞어 넣습니다.",
       "네크로멘서", "소멸된 #y언데드 #b1 장당 데미지가 #b1 증가합니다. 이 카드가 방어되지 않은 데미지를 가할 경우, 손패에 #b1 #y스켈레톤을 추가합니다."
     ]
   },
@@ -421,6 +421,12 @@
   "LatourAction": {
     "TEXT": [
       "보존할 카드를 선택합니다."
+    ]
+  },
+
+  "AtnatesAction": {
+    "TEXT": [
+      "Select a card to Exhaust. (Optional)"
     ]
   }
 }
