--- a/localization/jpn/AigisMod-Power-Strings.json
+++ b/localization/jpn/AigisMod-Power-Strings.json
@@ -540,6 +540,10 @@
                 "NAME": "呪影",
                 "DESCRIPTIONS": ["#yアタック によるダメージを #b", " 増加する。 ターン終了時、 #b", " #yブロック を得る。"]
         },
+        "aigisMod:KnightsOfTheRound": {
+                "NAME": "ナイツオブラウンド",
+                "DESCRIPTIONS": ["ターン開始時に、手札からカードを #b", " 枚選ぶ、 このターン中、コストを #b1 減少。"]
+        },
 
 
 
