Fixed Ivril description
2 mistakes were found.

Fixed Deep Sea to "aigismod:Deep_Sea"
Deleted a constant value: "2"

--- a/localization/eng/AigisMod-Card-Strings.json
+++ b/localization/eng/AigisMod-Card-Strings.json
@@ -362,14 +362,14 @@
   },
   "aigisMod:IvrilPlatinum": {
     "NAME": "Ivril",
-    "DESCRIPTION": "Deep Sea NL Deal !D! Damage. NL Apply !M! Poison. NL aigismod:Sailor 1: Shuffle 1 Deadman to draw Pile.",
+    "DESCRIPTION": "aigismod:Deep_Sea Sea NL Deal !D! Damage. NL Apply !M! Poison. NL aigismod:Sailor 1: Shuffle 1 Deadman to draw Pile.",
     "EXTENDED_DESCRIPTION" : [
       "She Who Conquers the Great Sea"
     ]
   },
   "aigisMod:IvrilBlack": {
     "NAME": "Ivril",
-    "DESCRIPTION": "Deep Sea NL Deal !D! Damage to ALL enemies. NL Apply 2 !M! Poison to ALL enemies. NL aigismod:Sailor 1:Shuffle 1 Deadman to draw Pile.",
+    "DESCRIPTION": "aigismod:Deep_Sea NL Deal !D! Damage to ALL enemies. NL Apply !M! Poison to ALL enemies. NL aigismod:Sailor 1:Shuffle 1 Deadman to draw Pile.",
     "EXTENDED_DESCRIPTION" : [
       "She Who Conquers the Great Sea"
     ]
