--- a/localization/jpn/AigisMod-UI-Strings.json
+++ b/localization/jpn/AigisMod-UI-Strings.json
@@ -310,8 +310,8 @@
 
   "NielAction": {
     "TEXT": [
-      "手札に加えるコスト1以下のカードを選ぶ",
-      "捨て札にコスト1以下のカードがない…"
+      "手札に加えるコスト1以下のアタックを選ぶ",
+      "捨て札にコスト1以下のアタックがない…"
     ]
   },
 
@@ -422,6 +422,12 @@
   "LatourAction": {
     "TEXT": [
       "保留するカードを選択する。"
+    ]
+  },
+
+  "AtnatesAction": {
+    "TEXT": [
+      "Select a card to Exhaust. (Optional)"
     ]
   }
 }
