--- a/localization/zhs/AigisMod-UI-Strings.json
+++ b/localization/zhs/AigisMod-UI-Strings.json
@@ -11,7 +11,7 @@
       "白之帝国", "可以与其他列出帝国牌的牌产生协同效果，只会出现在 #y皇帝 的卡牌池中",
       "咒术师", "打出此卡时, 如果你的主卡组中没有此牌记述的 #y诅咒 牌，将其加入到你的主卡组。",
       "恶魔", "回合开始时，如果此卡牌在消耗堆：使其 #y耗能 变为原始 #y耗能 -1并加入到手牌.",
-      "空域", "当打出此牌时，将1张 #y空中标记 洗入抽牌堆。每消耗一张 #y空中标记 伤害提升 #b1 点。",
+      "空域", "当打出此牌时，将1张 #y空中标记 洗入抽牌堆。",
       "亡灵法师", "每 #y消耗 一张 #y不死族 牌提升1点伤害。 伤害未被格挡时，将 #b1 张 #y骷髅 加入手牌。"
     ]
   },
@@ -408,7 +408,7 @@
   "ShirleyAction": {
     "TEXT": [
       "从抽牌堆或弃牌堆选择一张灵使、元素、召唤士、召唤兽牌加入到手牌中。",
-      "从抽牌堆或弃牌堆选择一张灵使、元素、召唤士、召唤兽牌加入到手牌中。"
+      "选择最多2张精灵使、元素使、召唤师或召唤物从抽牌堆或弃牌堆加入手牌。"
     ]
   },
 
@@ -421,6 +421,12 @@
   "LatourAction": {
     "TEXT": [
       "保留"
+    ]
+  },
+
+  "AtnatesAction": {
+    "TEXT": [
+      "选择一张牌消耗。 (可选)"
     ]
   }
 }
