--- a/localization/eng/AigisMod-Power-Strings.json
+++ b/localization/eng/AigisMod-Power-Strings.json
@@ -257,7 +257,7 @@
         },
         "aigisMod:SpookyPhenomenon": {
                 "NAME": "Spooky Phenomenon",
-                "DESCRIPTIONS": ["At end of turn, you can #yexhaust #b1 character in hand, if you do, all enemies gain #b1 #yWeak and this loses #b1 stack.", " Remove this power when this reaches #b0 stacks."]
+                "DESCRIPTIONS": ["At end of turn, you can #yexhaust #b1 card in hand, if you do, all enemies gain #b1 #yWeak and this loses #b1 stack.", " Remove this power when this reaches #b0 stacks."]
         },
         "aigisMod:ClearAndSerene": {
                 "NAME": "Clear and Serene",
@@ -432,7 +432,7 @@
 
         "aigisMod:WaterPressure": {
                 "NAME": "Water Pressure",
-                "DESCRIPTIONS": ["At the end of turn, lose #b", " #yHP, or all #yHP if this has #b7 stacks, except bosses."]
+                "DESCRIPTIONS": ["At the end of turn, lose #b", " #yHP, or all #yHP if this has #b7 stacks, except elite and bosses."]
         },
         "aigisMod:DrownedEnemy": {
                 "NAME": "Drown",
@@ -480,7 +480,7 @@
         },
         "aigisMod:WarshipArtillery": {
                 "NAME": "Warship Artillery",
-                "DESCRIPTIONS": ["When you play a #ySailor or #yDeep #ySea car, deal #b", " #ydamage to ALL enemies."]
+                "DESCRIPTIONS": ["When you play a #ySailor or #yDeep #ySea card, deal #b", " #ydamage to ALL enemies."]
         },
         "aigisMod:TailwindPrayer": {
                 "NAME": "Tailwind's Prayer",
@@ -530,7 +530,10 @@
                 "NAME": "Cursed Shadows",
                 "DESCRIPTIONS": ["Take #b", " more damage from #yattack #ycards. Gain #b", " #yBlock at the end of turn."]
         },
-
+        "aigisMod:KnightsOfTheRound": {
+                "NAME": "Knights of the Round",
+                "DESCRIPTIONS": ["At the start of turn, choose #b", " cards in hand, reduce their cost by 1 this turn."]
+        },
 
 
 
