--- a/localization/jpn/AigisMod-Keyword-Strings.json
+++ b/localization/jpn/AigisMod-Keyword-Strings.json
@@ -143,7 +143,7 @@
       "sluggish",
       "sluggish."
     ],
-    "DESCRIPTION": "敵に #yスロー を与える。ターン開始時に #b1 減少し、 #b 0 になると #yスロー は解除される。"
+    "DESCRIPTION": "敵に #yスロー を与える。ターン開始時に #b1 減少し、 #b0 になると #yスロー は解除される。"
   },
   {
     "PROPER_NAME": "カウンター",
@@ -392,7 +392,7 @@
       "Water_pressure",
       "water_pressure"
     ],
-    "DESCRIPTION": "ターン開始時に #gHP を失う。スタックが #b7 つ以上の場合、 全ての #gHP を失う(ボスは除く)。"
+    "DESCRIPTION": "ターン開始時に #gHP を失う。スタックが #b7 つ以上の場合、 全ての #gHP を失う(エリートとボスは除く)。"
   },
   {
     "PROPER_NAME": "水兵",
@@ -426,5 +426,15 @@
       "cursed_shadows"
     ],
     "DESCRIPTION": "ターン終了時、 #yブロック を得る。 #yアタック カード から 受けるダメージが増加する。"
+  },
+  {
+    "PROPER_NAME": "飛行隊",
+    "NAMES": [
+      "飛行隊",
+      "aerial",
+      "Aerial.",
+      "Aerial:"
+    ],
+    "DESCRIPTION": "プレイした時、 #yエアーシグナル を #b1 枚山札に加える。"
   }
 ]
