--- a/localization/kor/AigisMod-UI-Strings.json
+++ b/localization/kor/AigisMod-UI-Strings.json
@@ -11,7 +11,7 @@
       "백의 제국", "이 카드는 #y제국 카드들을 지명하는 효과를 받는 대상이 됩니다. #y황제로 플레이할 때에만 얻을 수 있습니다.",
       "주술사", "이 카드를 사용했을 때 표시되는 #y저주가 덱에 없다면 덱에 해당 저주를 추가합니다.",
       "데몬", "이 카드가 턴 시작시 소멸 카드 더미에 있을 경우, 이번 턴에만 이 카드의 코스트를 본래 코스트에서 1 감소된 상태로 손패에 넣습니다.",
-      "비행대", "이 카드를 사용했을 때, #b1 #y에어 #y시그널을 뽑을 카드 더미에 섞어 넣습니다. 소멸된 #y에어 #y시그널 #b1 장당 데미지가 #b1 증가합니다.",
+      "비행대", "이 카드를 사용했을 때, #b1 #y에어 #y시그널을 뽑을 카드 더미에 섞어 넣습니다.",
       "네크로멘서", "소멸된 #y언데드 #b1 장당 데미지가 #b1 증가합니다. 이 카드가 방어되지 않은 데미지를 가할 경우, 손패에 #b1 #y스켈레톤을 추가합니다."
     ]
   },
@@ -329,7 +329,7 @@
 
   "VivianAction": {
     "TEXT": [
-      "이번 전투에서 코스트를 감소시킵니다t."
+      "이번 전투에서 코스트를 감소시킵니다."
     ]
   },
 
@@ -355,72 +355,78 @@
 
   "PheasantAction": {
     "TEXT": [
-      "return to bottom of Draw Pile."
+      "뽑을 카드 더미 가장 아래로 되돌릴 카드를 선택합니다."
     ]
   },
 
   "PotalAction": {
     "TEXT": [
-      "Choose up to ", " Aerial cards to send to Discard Pile.",
-      "Choose an Aerial card to send to Discard Pile.",
-      "I don't have Aerial cards in Draw Pile..."
+      "버린 카드 더미에 보낼 비행대 카드를 ", " 장까지 선택합니다.",
+      "버린 카드 더미에 보낼 비행대 카드를 선택합니다.",
+      "뽑을 카드 더미에 비행대 카드가 없어..."
     ]
   },
 
   "PuniruAction": {
     "TEXT": [
-      "Choose 1 card to add to your hand."
+      "손패에 추가할 카드 1 장을 선택합니다."
     ]
   },
 
   "AmelieAction": {
     "TEXT": [
-      "Select a Sailor Attack Card to add to hand.",
-      "I don't have a Sailor Attack Card in Draw Pile..."
+      "손패에 추가할 세일러 공격 카드를 1 장 선택합니다.",
+      "뽑을 카드 더미에 세일러 공격 카드가 없어..."
     ]
   },
 
   "RenataAction": {
     "TEXT": [
-      "Choose up to ", " cards to send to Discard Pile."
+      "버린 카드 더미에 보낼 카드를 ", " 장까지 선택합니다."
     ]
   },
 
   "ThrudAction": {
     "TEXT": [
-      "Choose 1 Aerial card to send to Discard Pile."
+      "버린 카드 더미에 보낼 비행대 카드 1 장을 선택합니다."
     ]
   },
 
   "JacquelineAction": {
     "TEXT": [
-      "Select a Sailor or Deep Sea card to add to hand.",
-      "I don't have a Sailor or Deep Sea card in Discard Pile..."
+      "손패에 추가할 세일러 또는 심해 카드를 선택합니다.",
+      "버린 카드 더미에 세일러 또는 심해 카드가 없어..."
     ]
   },
 
   "NoelAction": {
     "TEXT": [
-      "duplicate."
+      "복사할 카드를 선택합니다."
     ]
   },
 
   "ShirleyAction": {
     "TEXT": [
-      "Choose a Spirit User, Elemental, Summoner or Summon card to add to hand from Draw Pile or Discard Pile.",
-      "Choose up to 2 Spirit User, Elemental, Summoner or Summon cards to add to hand from Draw Pile or Discard Pile."
+      "뽑을 카드 더미 또는 버린 카드 더미에서 손패로 추가할 엘레멘탈러, 엘레멘탈, 소환사, 소환수 카드를 1 장 선택합니다.",
+      "뽑을 카드 더미 또는 버린 카드 더미에서 손패로 추가할 엘레멘탈러, 엘레멘탈, 소환사, 소환수 카드를 2 장까지 선택합니다."
     ]
   },
 
   "RefletAction": {
     "TEXT": [
-      "Choose a Light Elemental to add to hand from Draw Pile or Discard Pile."
+      "뽑을 카드 더미 또는 버린 카드 더미에서 손패로 추가할 빛속성 엘레멘탈을 선택합니다."
     ]
   },
 
   "LatourAction": {
     "TEXT": [
-      "keep."
+      "보존할 카드를 선택합니다."
+    ]
+  },
+
+  "AtnatesAction": {
+    "TEXT": [
+      "Select a card to Exhaust. (Optional)"
     ]
   }
 }
