--- a/localization/zhs/AigisMod-Event-Strings.json
+++ b/localization/zhs/AigisMod-Event-Strings.json
@@ -13,7 +13,9 @@
       "[离开]",
       "选择一张英杰卡牌添加到你的牌组中。",
       "[招募] #g获得一张稀有英杰卡牌 。",
-      "[未解锁] 你没有可以升级至稀有的英杰卡牌。"
+      "[未解锁] 你没有可以升级至稀有的英杰卡牌。",
+      "[招募和战斗] 战斗前使用 #y英杰水晶 遗物。",
+      "[未解锁] 我不能使用英杰水晶遗物。"
     ]
   },
 
@@ -131,7 +133,7 @@
     "OPTIONS": [
       "[力量] #g将所有打击变为奇迹打击。 获得埃癸斯像。",
       "[援助] #g将一张牌加入牌组。",
-      "[体力] #g最大HP #b+8",
+      "[体力] #g最大HP #b+8 #g。",
       "[锁定] 你没有打击。",
       "[离开]"
     ]
