--- a/localization/zhs/AigisMod-Power-Strings.json
+++ b/localization/zhs/AigisMod-Power-Strings.json
@@ -265,7 +265,7 @@
         },
         "aigisMod:SpookyPhenomenon": {
                 "NAME": "惊吓现象",
-                "DESCRIPTIONS": ["回合结束时，可以消耗 #b1 张角色牌，对所有敌人施加 #b1 层 #y虚弱 并减少此能力 #b1 层。", "层数为 #b0 时移除此能力。"]
+                "DESCRIPTIONS": ["回合结束时，可以消耗 #b1 张牌，对所有敌人施加 #b1 层 #y虚弱 并减少此能力 #b1 层。", "层数为 #b0 时移除此能力。"]
         },
         "aigisMod:ClearAndSerene": {
                 "NAME": "明镜止水",
@@ -443,7 +443,7 @@
 
         "aigisMod:WaterPressure": {
                 "NAME": "水压",
-                "DESCRIPTIONS": ["回合结束时失去 #b", " 点 #y生命， 或者所有 #y生命，如果拥有 #b7 层以上，boss除外。"]
+                "DESCRIPTIONS": ["回合结束时失去 #b", " 点 #y生命， 或者所有 #y生命，如果拥有 #b7 层以上，boss且精英除外。"]
         },
         "aigisMod:DrownedEnemy": {
                 "NAME": "淹没",
@@ -503,7 +503,7 @@
         },
         "aigisMod:Eureka": {
                 "NAME": "尤里卡!",
-                "DESCRIPTIONS": ["在回合开始时，随机将 #b", " #y魔兽刻耳柏洛斯 、 #y水压 或 #y空中标记 加入手牌。"]
+                "DESCRIPTIONS": ["在回合开始时，随机将 #b", " #y魔兽刻耳柏洛斯 、 #y深海 或 #y空中标记 加入手牌。"]
         },
         "aigisMod:DevouringGreatwolf": {
                 "NAME": "噬天的大狼",
@@ -540,6 +540,10 @@
         "aigisMod:CursedShadows": {
                 "NAME": "咒影的大结界",
                 "DESCRIPTIONS": ["额外受到 #b", " 点来自 #y攻击牌 的伤害。 在回合结束时，获得 #b", " 点 #y格挡 。"]
+        },
+        "aigisMod:KnightsOfTheRound": {
+                "NAME": "圆桌骑士",
+                "DESCRIPTIONS": ["回合开始时，选择 #b", " 张手牌，本回合减少其耗能1点。"]
         },
 
 
