--- a/localization/jpn/AigisMod-Card-Strings.json
+++ b/localization/jpn/AigisMod-Card-Strings.json
@@ -334,14 +334,14 @@
   },
   "aigisMod:VidyaPlatinum": {
     "NAME": "ヴィディア",
-    "DESCRIPTION": "ターン開始時に手札のカードのコスト !M! 枚をこのターンの間 1 下げる。",
+    "DESCRIPTION": "ターン開始時に手札 !M! 枚を選び 、このターンの間コストを 1 下げる。",
     "EXTENDED_DESCRIPTION" : [
       "戦禍を断つ者"
     ]
   },
   "aigisMod:VidyaBlack": {
     "NAME": "ヴィディア",
-    "DESCRIPTION": "天賦 NL ターン開始時に手札のカードのコスト !M! 枚をこのターンの間 1 下げる。",
+    "DESCRIPTION": "天賦 NL ターン開始時に手札 !M! 枚を選び 、このターンの間コストを 1 下げる。",
     "EXTENDED_DESCRIPTION" : [
       "戦禍を断つ者"
     ]
@@ -419,7 +419,7 @@
   },
   "aigisMod:OshenBlack": {
     "NAME": "オーシェン",
-    "DESCRIPTION": "Apply !M! aigismod:lifelink. NL 敵全体に !D! aigismod:貫通 ダメージを与える。 NL !B! ブロック を得る。",
+    "DESCRIPTION": "aigismod:ライフリンク !M! を与える。 NL 敵全体に !D! aigismod:貫通 ダメージを与える。 NL !B! ブロック を得る。",
     "EXTENDED_DESCRIPTION" : [
       "光を継ぐ者"
     ]
